[gd_scene load_steps=15 format=3 uid="uid://dk7q1dn0buwnx"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_k032e"]
[ext_resource type="PackedScene" uid="uid://cer0t50d76v5m" path="res://scenes/UI/sound_button.tscn" id="2_qorah"]
[ext_resource type="Texture2D" uid="uid://3ed05pv1hm6v" path="res://assets/Sprites/Knight.png" id="2_sorwa"]
[ext_resource type="Texture2D" uid="uid://budjf447v6cha" path="res://assets/Sprites/Zombie.png" id="3_q613l"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2p2ke"]
atlas = ExtResource("2_sorwa")
region = Rect2(0, 56, 16, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_fw8k4"]
atlas = ExtResource("2_sorwa")
region = Rect2(16, 56, 16, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_imuxt"]
atlas = ExtResource("2_sorwa")
region = Rect2(32, 56, 16, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_epj6r"]
atlas = ExtResource("2_sorwa")
region = Rect2(48, 56, 16, 28)

[sub_resource type="SpriteFrames" id="SpriteFrames_bs3xq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2p2ke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fw8k4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_imuxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epj6r")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}, {
"frames": [],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_q4tq1"]
atlas = ExtResource("3_q613l")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_awvoy"]
atlas = ExtResource("3_q613l")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nva0w"]
atlas = ExtResource("3_q613l")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cpdxs"]
atlas = ExtResource("3_q613l")
region = Rect2(48, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ngfgh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q4tq1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_awvoy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nva0w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cpdxs")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Main" type="Node2D"]
script = ExtResource("1_k032e")

[node name="UI" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="VBoxContainer" parent="UI/MarginContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 50

[node name="Play" parent="UI/MarginContainer/HBoxContainer" instance=ExtResource("2_qorah")]
layout_mode = 2
text = "Play"

[node name="Controls" parent="UI/MarginContainer/HBoxContainer" instance=ExtResource("2_qorah")]
layout_mode = 2
text = "Controls"

[node name="Quit" parent="UI/MarginContainer/HBoxContainer" instance=ExtResource("2_qorah")]
layout_mode = 2
text = "Quit"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="UI"]
position = Vector2(112, 192)
scale = Vector2(5.54698, 5.54698)
sprite_frames = SubResource("SpriteFrames_bs3xq")
autoplay = "default"
speed_scale = 0.2

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="UI"]
position = Vector2(528, 192)
scale = Vector2(7.57387, 7.57387)
sprite_frames = SubResource("SpriteFrames_ngfgh")
autoplay = "default"
frame_progress = 0.11071
speed_scale = 0.5
flip_h = true

[connection signal="pressed" from="UI/MarginContainer/HBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="UI/MarginContainer/HBoxContainer/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="UI/MarginContainer/HBoxContainer/Quit" to="." method="_on_quit_pressed"]
